--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
 MONGODB_CONNECTION_STRING = "mongodb+srv://ferdoushasanpr_db_user:6tMtFAaAfeOJ3a6Z@cluster0.olqdyqr.mongodb.net/"
+JWT_SECRET=supersecretkey123
